# TraceToy

result/: graph1.2.xlsx  graph2.2.xlsx
src/: CMakeLists.txt  build.sh  main.cpp
